fixed alignment

--- a/twitter-running/frontend/src/components/res/grant.css
+++ b/twitter-running/frontend/src/components/res/grant.css
@@ -35,7 +35,7 @@ font-weight: bold;
 
 .padding-0{
     padding-bottom: 10px;
-    padding-left: 200px;
+    padding-left: 20px;
     padding-right: 20px;
 }
 
@@ -45,7 +45,7 @@ textarea {
   border:2px;
   width:50%;
   height:80%;
-  margin-left:10%;
+  margin-left:20%;
   margin-right:10%;
   margin-top: 10%;
   margin-bottom: 10%;
